--- a/config_sample.env
+++ b/config_sample.env
@@ -1,27 +1,24 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = ""
+BOT_TOKEN = "5508983876:AAHRq9cdKKJgrWxCEvaikaPwLFeF6Lw0hYA"
+GDRIVE_FOLDER_ID = "0AP3_4uI6O21IUk9PVA"
+OWNER_ID = "536680979"
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-USE_SERVICE_ACCOUNTS = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = "14289614"
+TELEGRAM_HASH = "02de803b3c762979156ea7a40d297333"
+USE_SERVICE_ACCOUNTS = "False"
 
 # Optional config
 ACCOUNTS_ZIP_URL = "" #Enter Direct Links TO Import Service Accounts Directly From Urls Instead Of Adding Files To Repo.( Archive the accounts folder to a zip file.)
 TOKEN_PICKLE_URL = "" #Enter Direct Links TO Import Credentials Directly From Urls Instead Of Adding Files To Repo.
-AUTHORIZED_CHATS = "" #Separated by space
-SUDO_USERS = ""  #Separated by space
+AUTHORIZED_CHATS = "-625278807" #Separated by space
+SUDO_USERS = "536680979"  #Separated by space
 LOGS_CHATS = "" #Separated by space
 DATABASE_URL = ""
 IGNORE_PENDING_REQUESTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://shubuindex.shubuindex.workers.dev/0:"
 MEGA_KEY = ""
 MEGA_USERNAME = ""
 MEGA_PASSWORD = ""
@@ -30,16 +27,16 @@ SHORTENER = ""
 SHORTENER_API = ""
 STOP_DUPLICATE_CLONE = ""
 CLONE_LIMIT = ""
-TG_SPLIT_SIZE = "" # leave it empty for max size(2GB)
+TG_SPLIT_SIZE = "4" # leave it empty for max size(2GB)
 AS_DOCUMENT = ""
-CUSTOM_FILENAME = ""
+CUSTOM_FILENAME = "Shubu"
 RECURSIVE_SEARCH = "" #T/F And Fill drive_folder File Using Driveid.py Script.
 UPTOBOX_TOKEN = "" 
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if its URL ends with ?a=view, if yes make it True it will work (Compatible with Bhadoo Drive Index)
-VIEW_LINK = ""
+VIEW_LINK = "True"
 # GDTOT COOKIES
-CRYPT = ""
+CRYPT = "blREZlc3QzJSeERIOURWWmpodk1LZEhQd2RDSjVwMkRNcm9qcTlaa3NwRT0%3D"
 # Add more buttons (two buttons are already added of file link and index link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
 BUTTON_THREE_NAME = ""
