--- a/config_.env
+++ b/config_.env
@@ -5,7 +5,7 @@ OWNER_ID = "536680979"
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = "True"
+IS_TEAM_DRIVE = "False"
 TELEGRAM_API = "14289614"
 TELEGRAM_HASH = "02de803b3c762979156ea7a40d297333"
 USE_SERVICE_ACCOUNTS = "False"
@@ -26,7 +26,7 @@ BLOCK_MEGA_LINKS = ""
 SHORTENER = ""
 SHORTENER_API = ""
 STOP_DUPLICATE_CLONE = ""
-CLONE_LIMIT = ""
+CLONE_LIMIT = "50"
 TG_SPLIT_SIZE = "4" # leave it empty for max size(2GB)
 AS_DOCUMENT = ""
 CUSTOM_FILENAME = "Shubu"
