--- a/config_.env
+++ b/config_.env
@@ -27,7 +27,7 @@ SHORTENER = ""
 SHORTENER_API = ""
 STOP_DUPLICATE_CLONE = ""
 CLONE_LIMIT = "50"
-TG_SPLIT_SIZE = "4" # leave it empty for max size(2GB)
+TG_SPLIT_SIZE = "" # leave it empty for max size(2GB)
 AS_DOCUMENT = ""
 CUSTOM_FILENAME = "Shubu"
 RECURSIVE_SEARCH = "" #T/F And Fill drive_folder File Using Driveid.py Script.
