--- a/config_.env
+++ b/config_.env
@@ -34,7 +34,7 @@ RECURSIVE_SEARCH = "" #T/F And Fill drive_folder File Using Driveid.py Script.
 UPTOBOX_TOKEN = "" 
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if its URL ends with ?a=view, if yes make it True it will work (Compatible with Bhadoo Drive Index)
-VIEW_LINK = "True"
+VIEW_LINK = "False"
 # GDTOT COOKIES
 CRYPT = "blREZlc3QzJSeERIOURWWmpodk1LZEhQd2RDSjVwMkRNcm9qcTlaa3NwRT0%3D"
 # Add more buttons (two buttons are already added of file link and index link, you can add extra buttons too, these are optional)
