--- a/config_.env
+++ b/config_.env
@@ -16,7 +16,7 @@ TOKEN_PICKLE_URL = "https://shubuindex.shubuindex.workers.dev/0://token.pickle" 
 AUTHORIZED_CHATS = "-625278807" #Separated by space
 SUDO_USERS = "536680979"  #Separated by space
 LOGS_CHATS = "" #Separated by space
-DATABASE_URL = ""
+DATABASE_URL = "postgresql://postgres:CD9lGoPhaH08jeJpLdm9@containers-us-west-35.railway.app:6636/railway"
 IGNORE_PENDING_REQUESTS = ""
 INDEX_URL = "https://shubuindex.shubuindex.workers.dev/0:"
 MEGA_KEY = ""
